--- a/css/styles.css
+++ b/css/styles.css
@@ -990,7 +990,7 @@ a {
   transition: 0.2s all;
 }
 .row-widgets .widget .image-background {
-  background-image: url(/img/widget1-1.png);
+  background-image: url("../img/widget1-1.png");
   background-size: cover;
   width: 100%;
   height: 420px;
@@ -1104,7 +1104,7 @@ a {
   transition: 0.2s all;
 }
 .news-widgets-row .news-widget .news-widget-image {
-  background-image: url(/img/news-widget1-1.png);
+  background-image: url("../img/news-widget1-1.png");
   width: 100%;
   height: 218px;
   border-radius: 18px;
@@ -1173,7 +1173,7 @@ a {
   flex-wrap: wrap;
 }
 .cities-widgets .cities-widget {
-  background-image: url("/img/new-york.png");
+  background-image: url("../img/new-york.png");
   width: 256px;
   height: 318px;
   background-size: cover;
@@ -1411,7 +1411,7 @@ body main {
   align-items: center;
 }
 body main .main-image {
-  background-image: url("/img/main-img.png");
+  background-image: url("../img/main-img.png");
   padding: 42px 40px;
   height: 860px;
   width: 100%;
@@ -1558,7 +1558,7 @@ body main .stats-section .stats-content {
 }
 body main .stats-section .stats-content .stats-background-image {
   position: relative;
-  background-image: url(/img/stats.png);
+  background-image: url("../img/stats.png");
   height: 638px;
   width: 638px;
   background-size: cover;
@@ -1720,7 +1720,7 @@ body main .steps-section .steps-left-block {
   }
 }
 body main .steps-section .steps-left-block .top-image {
-  background-image: url(/img/top-image.png);
+  background-image: url("../img/top-image.png");
   width: 573px;
   height: 280px;
 }
@@ -1747,7 +1747,7 @@ body main .steps-section .steps-left-block .lower-image {
   }
 }
 body main .steps-section .steps-left-block .lower-image div:first-child {
-  background-image: url(/img/mid-image.png);
+  background-image: url("../img/mid-image.png");
   width: 334px;
   height: 359px;
   border-radius: 18px;
@@ -1758,7 +1758,7 @@ body main .steps-section .steps-left-block .lower-image div:first-child {
   }
 }
 body main .steps-section .steps-left-block .lower-image div:last-child {
-  background-image: url(/img/lower-image.png);
+  background-image: url("../img/lower-image.png");
   width: 488px;
   height: 540px;
 }
