--- a/scss/about-us.scss
+++ b/scss/about-us.scss
@@ -165,7 +165,7 @@
         height: 508px;
 
         .become-agent-pic1 {
-            background-image: url(../img/estate-block-pic1.png);
+            background-image: url("../img/estate-block-pic1.png");
             background-size: cover;
             border-radius: 18px;
             width: 328px;
@@ -176,7 +176,7 @@
         }
 
         .become-agent-pic2 {
-            background-image: url(../img/estate-block-pic.png);
+            background-image: url("../img/estate-block-pic.png");
             background-size: cover;
             border-radius: 18px;
             width: 278px;
